# house-cli

./: CLAUDE.md  README.md  pyproject.toml
src/house_cli/: main.py
src/house_cli/client/: auth.py  base.py  http.py
src/house_cli/client/adapters/: __init__.py  anjuke.py  beike.py  fang.py  tongcheng.py  zhuge.py  ziroom.py
src/house_cli/commands/: analyze.py  compare.py  detail.py  export.py  mortgage.py  search.py  watch.py
src/house_cli/models/: __init__.py  cities.py  filter.py  house.py  output.py
src/house_cli/utils/: cache.py  config.py  formatter.py
